--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,11 @@ databases:
   - name: webhook-subscriber
 
 services:
+  - type: redis
+    name: cache
+    ipAllowList: [ ] # only allow internal connections
+    plan: free # optional (defaults to starter)
+    maxmemoryPolicy: allkeys-lfu
   - type: web
     name: webhook-subscriber
     env: ruby
@@ -14,3 +19,8 @@ services:
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
+      - key: REDIS_URL # this must match the name of the environment variable used in production.rb
+        fromService:
+          type: redis
+          name: cache
+          property: connectionString
