--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,19 @@ services:
     ipAllowList: [ ] # only allow internal connections
     plan: free # optional (defaults to starter)
     maxmemoryPolicy: allkeys-lfu
+  - type: worker
+    name: sidekiq-worker
+    env: ruby
+    buildCommand: bundle install
+    startCommand: bundle exec sidekiq
+    envVars:
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: sidekiq-redis
+          property: connectionString
+      - key: RAILS_MASTER_KEY
+        sync: false
   - type: web
     name: webhook-subscriber
     env: ruby
