--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
       - key: REDIS_URL
         fromService:
           type: redis
-          name: sidekiq-redis
+          name: webhook-subscriber-cache
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
@@ -35,5 +35,5 @@ services:
       - key: REDIS_URL # this must match the name of the environment variable used in production.rb
         fromService:
           type: redis
-          name: cache
+          name: webhook-subscriber-cache
           property: connectionString
